acvm-repo/msgpack_tagged/tests/compile_fail/allow_reserved_without_catch_all.stderr
error: `#[tagged(allow_reserved)]` requires a `#[serde(other)]` unit variant on the enum — that's where the wrapper routes unknown/reserved variant tags on decode
  --> tests/compile_fail/allow_reserved_without_catch_all.rs:8:1
   |
8  | / #[tagged(reserved(2), allow_reserved)]
9  | | enum Choice {
10 | |     #[tag(0)]
11 | |     First,
12 | |     #[tag(1)]
13 | |     Second,
14 | | }
   | |_^
